# pm5190-mcp

./: .mcp.json.template  README.md  pyproject.toml  server.py  server_stdio.py
pm5190_mcp/: server.py
