[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm5190-mcp"
version = "0.1.4"
description = "MCP server for controlling the Philips PM5190 LF synthesizer via AR488 serial-to-GPIB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/lucasgerads/pm5190-mcp"
Repository = "https://github.com/lucasgerads/pm5190-mcp"
Issues = "https://github.com/lucasgerads/pm5190-mcp/issues"

[project.scripts]
pm5190-mcp = "pm5190_mcp.server:main"
